# currency_forecast

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
src/data_loader/: fetch_data.py
src/model/: dataset.py  model_lstm.py  predict.py  prophet_model.py  train.py
src/preprocessing/: preprocess.py
src/web/: app.py
